--- a/src/express/templates/new-offer.pug
+++ b/src/express/templates/new-offer.pug
@@ -5,7 +5,7 @@ block content
     .ticket-form__wrapper
       h1.ticket-form__title Новая публикация
       .ticket-form__tile
-        form.ticket-form__form.form(action='#' method='post' enctype='multipart/form-data' autocomplete='off')
+        form.ticket-form__form.form(action='/offers/add' method='post' enctype='multipart/form-data' autocomplete='off')
           .ticket-form__avatar-container.js-preview-container
             .ticket-form__avatar.js-preview
             .ticket-form__field-avatar
@@ -16,20 +16,18 @@ block content
           .ticket-form__content
             .ticket-form__row
               .form__field
-                input#ticket-name.js-field(type='text' name='ticket-name' required)
-                label(for='ticket-name') Название
+                input#ticket-name.js-field(type='text' name='title' required)
+                label(for='title') Название
                 span Обязательное поле
             .ticket-form__row
               .form__field
-                textarea#comment-field.js-field(name='comment' cols='30' rows='10' maxlength='400' minlength='50')
-                label(for='comment-field') Описание
+                textarea#description-field.js-field(name='description' cols='30' rows='10' maxlength='400' minlength='50')
+                label(for='description-field') Описание
                 span Обязательное поле
             .ticket-form__row
               select#category-field.form__select.js-multiple-select(name='category' data-label='Выбрать категорию публикации')
-                option(value='1') Дом
-                option(value='2') Спорт и отдых
-                option(value='3') Авто
-                option(value='4') Электроника
+                each category in categories
+                  option(value=category) #{category}
             .ticket-form__row
               .form__field.form__field--price
                 input#price-field.js-field.js-price(type='number' name='price' min='1' required)
