--- a/src/express/templates/offer-edit.pug
+++ b/src/express/templates/offer-edit.pug
@@ -28,11 +28,11 @@ block content
                 span Обязательное поле
             .ticket-form__row
               select#category-field.form__select.js-multiple-select(name='category' data-label='Выбрать категорию публикации' multiple)
-                each category, index in categories
-                  option(value=index selected=offer.category.includes(category)) #{category}
+                each category in categories
+                  option(value=category.id selected=offer.categories.some(item => item.id === category.id)) #{category.title}
             .ticket-form__row
               .form__field.form__field--price
-                input#price-field.js-field.js-price(type='number' name='price' min='1' value=offer.price required)
+                input#price-field.js-field.js-price(type='number' name='price' min='1' value=offer.sum required)
                 label(for='price-field') Цена
                 span Обязательное поле
               .form__switch.switch
@@ -40,6 +40,6 @@ block content
                   input#buy-field.visually-hidden(type='radio' name='action' value='buy' checked=(offer.type === 'offer'))
                   label.switch__button(for='buy-field') Куплю
                 .switch__item
-                  input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type === 'sale'))
+                  input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type === 'buy'))
                   label.switch__button(for='sell-field') Продам
           button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
