--- a/src/express/templates/search-result.pug
+++ b/src/express/templates/search-result.pug
@@ -16,8 +16,8 @@ block content
               .ticket-card__info
                 span.ticket-card__label #{result.type === `OFFER` ? `Куплю` : `Продам`}
                 .ticket-card__categories
-                  each category in result.category
-                    a(href="#") #{category}
+                  each category in result.categories
+                    a(href="#") #{category.title}
                 .ticket-card__header
                   h3.ticket-card__title
                     a(href='#') #{result.title}
