--- a/src/express/templates/offer-edit.pug
+++ b/src/express/templates/offer-edit.pug
@@ -5,10 +5,11 @@ block content
     .ticket-form__wrapper
       h1.ticket-form__title Редактировать публикацию
       .ticket-form__tile
-        form.ticket-form__form.form(action='#' method='post' enctype='multipart/form-data' autocomplete='off')
+        form.ticket-form__form.form(action=`/offers/edit/${id}` method='post' enctype='multipart/form-data' autocomplete='off')
           .ticket-form__avatar-container.js-preview-container.uploaded
             .ticket-form__avatar.js-preview
-              img(src=`/img/${offer.picture}` alt)
+              img(src=`/img/${offer.picture}` alt="")
+            input(type="hidden" name="old-image" value=offer.picture)
             .ticket-form__field-avatar
               input#avatar.visually-hidden.js-file-field(type='file' name='avatar')
               label(for='avatar')
@@ -17,17 +18,17 @@ block content
           .ticket-form__content
             .ticket-form__row
               .form__field
-                input#ticket-name.js-field(type='text' name='ticket-name' value=offer.title required)
+                input#ticket-name.js-field(type='text' name='title' value=offer.title required)
                 label(for='ticket-name') Название
                 span Обязательное поле
             .ticket-form__row
               .form__field
-                textarea#comment-field.js-field(name='comment' cols='30' rows='10' maxlength='400' minlength='50')
+                textarea#comment-field.js-field(name='description' cols='30' rows='10' maxlength='400' minlength='50')
                   | #{offer.description}
                 label(for='comment-field') Описание
                 span Обязательное поле
             .ticket-form__row
-              select#category-field.form__select.js-multiple-select(name='category' data-label='Выбрать категорию публикации' multiple)
+              select#category-field.form__select.js-multiple-select(name='categories' data-label='Выбрать категорию публикации' multiple)
                 each category in categories
                   option(value=category.id selected=offer.categories.some(item => item.id === category.id)) #{category.title}
             .ticket-form__row
@@ -37,9 +38,9 @@ block content
                 span Обязательное поле
               .form__switch.switch
                 .switch__item
-                  input#buy-field.visually-hidden(type='radio' name='action' value='buy' checked=(offer.type === 'offer'))
+                  input#buy-field.visually-hidden(type='radio' name='action' value='buy' checked=(offer.type === 'buy'))
                   label.switch__button(for='buy-field') Куплю
                 .switch__item
-                  input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type === 'buy'))
+                  input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type === 'sell'))
                   label.switch__button(for='sell-field') Продам
           button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
