--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -11,8 +11,18 @@ head
       pointer-events: none;
     }
 body
+  -
+    const getRandomInt = (max) => Math.ceil(Math.random() * max + 1);
+
   mixin ticketLabel(type)
     span(class!=attributes.class || `ticket-card__label`) #{type === `OFFER` ? `Куплю` : `Продам`}
+
+  mixin categoryImage(category)
+    -
+      const idPadded = `0${getRandomInt(5)}`
+
+    img(src=`/img/cat${idPadded}.jpg` srcset=`/img/cat${idPadded}@2x.jpg 2x` alt=category.name)
+
   include partials/header.pug
   block content
   include partials/footer.pug
