--- a/src/express/templates/main.pug
+++ b/src/express/templates/main.pug
@@ -27,6 +27,7 @@ block content
                     |  ₽
                 .ticket-card__desc
                   p #{offer.description}
+    +pagination(page, totalPages, 2, `?`)
     section.tickets-list
       h2.visually-hidden Самые обсуждаемые предложения
       .tickets-list__wrapper
